--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+<link rel="stylesheet" href="style.css">
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Simple food</title>
@@ -109,10 +109,14 @@
             BA HNNINI street near UMNIA BANK - DAKHLA 📍
 </h6>        <h6>
                 Delivery 🛵 +212696650061</h6>
-                <nav class="navbar bg-white" style="height: 100px;">
+
 
       </div>
-
+      <nav class="navbar sticky-bottom justify-content-center text-center">
+        <div class="container justify-content-center">
+          <a class="navbar-brand wow rounded-circle justify-content-center " href="tel:+212696650061"><img src="https://img.icons8.com/ios-glyphs/60/null/ringer-volume.png"/></a>
+        </div>
+      </nav>
       <div class="card text-center text-capitalize">
         <div class="card-header">
 <h1>our meals</h1>
